<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/avatar_image_placeholder"
            android:contentDescription="placeholder batman image"
            />

        <EditText
            android:id="@+id/etNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:gravity="center"
            android:inputType="textPersonName"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:gravity="center"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp" />
        <EditText
            android:id="@+id/etWhatIDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/what_i_do"
            android:gravity="center"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/notRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already Have an Account?"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toTopOf="@id/btnSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>
        <Button
            android:id="@+id/LogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:layout_marginBottom="24dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
