<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/profileImage"
            android:scaleType="centerCrop"
            android:layout_marginEnd="12dp"
            app:shapeAppearanceOverlay="@style/CircleImageView"
            tools:src="@tools:sample/avatars"/>

        <LinearLayout
            android:layout_width="@dimen/chatItemLayoutObjWidth"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/generalPadding"
            android:paddingEnd="@dimen/generalPadding">

            <TextView
                android:id="@+id/accountName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="@dimen/maxLinesChatItem"
                android:text="@string/nickname"
                android:textColor="@android:color/black"
                android:textSize="@dimen/chatItemNicknameTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/chatItemMarginTop"
                android:ellipsize="end"
                android:maxLines="@dimen/maxLinesChatItem"
                android:text="@string/lastMessage"
                android:textColor="@android:color/black"
                android:textSize="@dimen/chatItemOccupationTextSize" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>